[package]
name = "midnight-storage"
edition = "2024"
version = "2.0.1"
license.workspace = true
repository.workspace = true
description = "Provides data structures and storage primitives for Midnight's ledger."

[features]
proptest = ["dep:proptest", "dep:proptest-derive", "storage-core/proptest", "base-crypto/proptest"]
sqlite = ["storage-core/sqlite"]
parity-db = ["storage-core/parity-db"]
stress-test = ["dep:serde_json", "dep:os_pipe", "storage-core/test-utilities"]
bench = ["storage-core/bench", "dep:pprof", "dep:criterion"]
public-internal-structure = ["storage-core/public-internal-structure"]
state-translation = ["storage-core/state-translation", "dep:hashbrown", "public-internal-structure"]

[dependencies]
storage-core = { version = "1.0.0", path = "../storage-core", package = "midnight-storage-core" }
base-crypto = { version = "1.0.0", path = "../base-crypto", package = "midnight-base-crypto" }
serialize = { version = "1.0.0", path = "../serialize", package = "midnight-serialize" }
rand = { version = "^0.8.4", features = ["getrandom"] }
derive-where = "^1.5.0"
crypto = { version = "0.5.1", features = ["digest"] }
parking_lot = "^0.12.4"
sha2 = "0.10.9"
serde = { version = "^1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["std"], optional = true }
proptest = { version = "~1.6.0", optional = true }
proptest-derive = { version = "0.5", optional = true }
tempfile = "3.20"
hashbrown = { version = "^0.16.0", optional = true }
pprof = { version = "0.14", optional = true, features = ["criterion", "flamegraph"] }
os_pipe = { version = "1.2.2", optional = true }
criterion = { version = "^0.5.1", optional = true }
sysinfo = "0.34.2"

[dev-dependencies]
pastey = "0.1.1"
rayon = "^1.10.0"
storage-core = { path = "../storage-core", package = "midnight-storage-core", features = ["test-utilities"] }
onchain-state = { path = "../onchain-state", package = "midnight-onchain-state" }

[[bench]]
name = "benchmarking"
harness = false
required-features = ["bench"]

[[example]]
name = "arena-transactions"
# Tests in examples are not run by default
test = true
# Docs for examples are not generated by default
doc = true

[[example]]
name = "state-translation"
# Tests in examples are not run by default
test = true
# Docs for examples are not generated by default
doc = true
required-features = ["state-translation", "parity-db"]

[[bin]]
name = "stress"
path = "bin/stress.rs"
required-features = ["stress-test"]
