[package]
name = "midnight-translation-test"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
serialize = { path = "../serialize", package = "midnight-serialize" }
storage = { path = "../storage", package = "midnight-storage", features = ["public-internal-structure"] }
derive-where = "^1.5.0"
