[package]
name = "midnight-translation-test"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
serialize = { path = "../serialize", package = "midnight-serialize" }
storage = { path = "../storage", package = "midnight-storage", features = ["public-internal-structure"] }
old-ledger = { path = "../ledger", package = "midnight-ledger" }
old-zswap = { path = "../zswap", package = "midnight-zswap" }
old-transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto", features = ["public-internal-structure"] }
old-onchain-state = { path = "../onchain-state", package = "midnight-onchain-state", features = ["public-internal-structure"] }
old-coin-structure = { path = "../coin-structure", package = "midnight-coin-structure" }
new-ledger = { git = "https://github.com/midnightntwrk/midnight-ledger", branch = "tkerber/translation-test-fork", package = "midnight-ledger" }
new-zswap = { git = "https://github.com/midnightntwrk/midnight-ledger", branch = "tkerber/translation-test-fork", package = "midnight-zswap" }
new-onchain-state = { git = "https://github.com/midnightntwrk/midnight-ledger", branch = "tkerber/translation-test-fork", package = "midnight-onchain-state", features = ["public-internal-structure"] }
new-transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger", branch = "tkerber/translation-test-fork", package = "midnight-transient-crypto", features = ["public-internal-structure"] }
new-coin-structure = { git = "https://github.com/midnightntwrk/midnight-ledger", branch = "tkerber/translation-test-fork", package = "midnight-coin-structure" }
derive-where = "^1.5.0"

