[package]
name = "v6-to-v7-state-translation"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
ledger-v6 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", branch = "ledger-6.2.0-patched-storage", package = "midnight-ledger", features = ["proving"] }
ledger-v7 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-ledger", features = ["proving", "test-utilities"] }
storage = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-storage", features = ["state-translation"] }
base-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-base-crypto" }
serialize = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-serialize" }
coin-structure-v6 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", branch = "ledger-6.2.0-patched-storage", package = "midnight-coin-structure" }
coin-structure-v7 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-coin-structure" }
zswap-v7 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-zswap" }
onchain-state-v6 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", branch = "ledger-6.2.0-patched-storage", package = "midnight-onchain-state" }
onchain-state-v7 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-onchain-state" }

[dev-dependencies]
onchain-runtime = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-onchain-runtime" }
transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-7.0.0-alpha.1", package = "midnight-transient-crypto" }
transient-crypto-v6 = { git = "https://github.com/midnightntwrk/midnight-ledger.git", branch = "ledger-6.2.0-patched-storage", package = "midnight-transient-crypto" }
rand = { version = "^0.8.4", features = ["getrandom"] }
tokio = { version = "^1.46.1", features = ["rt", "macros"] }
lazy_static = "^1.5.0"

[[example]]
name = "ledger-state"

