[package]
name = "zkir-v3"
version = "3.0.0-alpha.1"
edition = "2021"
license.workspace = true

[features]
proptest = [
  "dep:proptest-derive",
  "base-crypto/proptest",
  "transient-crypto/proptest",
  "serialize/proptest",
]

[dependencies]
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
serialize = { path = "../serialize", package = "midnight-serialize" }
transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto" }

midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk", tag = "midnight-circuits-v4.0.0" }
midnight-circuits = { git = "https://github.com/midnightntwrk/midnight-zk", tag = "midnight-circuits-v4.0.0" }

group = "^0.13.0"
const-hex = "^1.14.0"
serde = { version = "^1.0.0", features = ["derive", "rc"] }
serde_json = { version = "^1.0.0" }
anyhow = "^1.0.98"
rand = "^0.8.0"
tracing = { version = "^0.1.41" }

proptest-derive = { version = "0.5", optional = true }

[dev-dependencies]
zkir-v3 = { path = ".", features = ["proptest"] }