[package]
name = "zkir-v3"
version = "3.0.0-rc.1"
edition = "2024"
license.workspace = true

[features]
proptest = [
  "dep:paste",
  "dep:proptest",
  "dep:proptest-derive",
  "base-crypto/proptest",
  "transient-crypto/proptest",
  "serialize/proptest",
]

[dependencies]
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
serialize = { path = "../serialize", package = "midnight-serialize" }
transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto", features = ["cli"] }

midnight-proofs = { version = "^0.7.0" }
midnight-circuits = { version = "^6.0.0" }
midnight-zk-stdlib = { version = "^1.0.0" }

group = "^0.13.0"
const-hex = "^1.14.0"
serde = { version = "^1.0.0", features = ["derive", "rc"] }
serde_bytes = { version = "^0.11.0" }
serde_json = { version = "^1.0.0" }
anyhow = "^1.0.98"
hex = "^0.4.3"
rand = "^0.8.0"
rand_chacha = "^0.3.1"
tracing = { version = "^0.1.41" }

paste = { version = "1.0.14", optional = true }
proptest = { version = "1.4.0", optional = true }
proptest-derive = { version = "0.5", optional = true }

[dev-dependencies]
zkir-v3 = { path = ".", features = ["proptest"] }
actix-rt = "^2.9.0"
pastey = "0.1.1"
