[package]
name = "midnight-zswap"
edition = "2024"
license.workspace = true
version.workspace = true

[features]
default = ["proof-verifying"]
proof-verifying = []

[dependencies]
base-crypto = { path = "../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { path = "../transient-crypto", package = "midnight-transient-crypto" }
coin-structure = { path = "../coin-structure", package = "midnight-coin-structure" }
storage = { path = "../storage", package = "midnight-storage" }
serialize = { path = "../serialize", package = "midnight-serialize" }
midnight-onchain-runtime = { path = "../onchain-runtime", package = "midnight-onchain-runtime", features = [ "vendored" ] }

# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.4", features = ["getrandom"] }
is_sorted = "^0.1.1"
lazy_static = "^1.5.0"
tracing = { version = "^0.1.41" }
itertools = "^0.14.0"
zeroize = "^1.8.0"

fake = { version = "^2.10.0", features = ["derive"] }
futures = { version = "^0.3.31" }
serde = { version = "^1.0.219", features = ["derive"] }
derive-where = "^1.5.0"

[dev-dependencies]
zkir_v2 = { path = "../zkir", package = "zkir" }
fake = { version = "^2.10.0", features = ["derive"] }
rand = { version = "^0.8.4", features = ["getrandom"] }
futures = "^0.3.31"
criterion = "0.5"
tokio = { version = "^1.46.1", features = ["rt", "macros"] }
tracing-subscriber = "^0.3.19"
rayon = "^1.10.0"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
hex = "^0.4.3"
paste = "1.0.15"

[[bench]]
name = "benchmarking"
harness = false
