[package]
name = "midnight-zswap"
edition = "2024"
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Implementation of the Zswap shielded token atomic swap mechanism."

[features]
default = ["proof-verifying"]
proof-verifying = []

[dependencies]
base-crypto = { version = "1.0.0", path = "../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { version = "2.0.0", path = "../transient-crypto", package = "midnight-transient-crypto" }
coin-structure = { version = "2.0.0", path = "../coin-structure", package = "midnight-coin-structure" }
storage = { version = "2.0.0", path = "../storage", package = "midnight-storage" }
serialize = { version = "1.0.0", path = "../serialize", package = "midnight-serialize" }
midnight-onchain-runtime = { version = "3.0.0-rc.1", path = "../onchain-runtime", package = "midnight-onchain-runtime", features = [ "vendored" ] }
midnight-ledger-static = { version = "9.0.0", path = "../static", package = "midnight-ledger-static" }

# rand 0.9.0 is not yet supported by some of our dependencies, we will
# stick with 0.8.0 for now.
rand = { version = "^0.8.4", features = ["getrandom"] }
is_sorted = "^0.1.1"
lazy_static = "^1.5.0"
tracing = { version = "^0.1.41" }
itertools = "^0.14.0"
zeroize = "^1.8.0"

fake = { version = "^2.10.0", features = ["derive"] }
futures = { version = "^0.3.31" }
serde = { version = "^1.0.219", features = ["derive"] }
derive-where = "^1.5.0"

[dev-dependencies]
zkir_v2 = { path = "../zkir", package = "midnight-zkir" }
fake = { version = "^2.10.0", features = ["derive"] }
rand = { version = "^0.8.4", features = ["getrandom"] }
futures = "^0.3.31"
criterion = "0.5"
tokio = { version = "^1.46.1", features = ["rt", "macros"] }
tracing-subscriber = "^0.3.19"
rayon = "^1.10.0"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
hex = "^0.4.3"
pastey = "0.1.1"

[[bench]]
name = "benchmarking"
harness = false
