[package]
name = "dioxus-bench"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = []
proof-server-http = ["prover-core/proof-server-http"]

[dependencies]
prover-core = { path = "../prover-core" }
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
dioxus = { version = "0.6", features = ["mobile"] }
ndk-context = "0.1"
jni = "0.21"

[target.'cfg(not(target_os = "android"))'.dependencies]
dirs = "5"
