[package]
name = "prover-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = []
# When enabled, also embeds the in-process midnight-proof-server. Desktop only;
# the Cargo target gating happens via cfg in the source files, not here.
proof-server-http = ["dep:midnight-proof-server", "dep:reqwest"]
# Enables criterion benches.
bench = ["dep:criterion"]

[dependencies]
# Existing workspace members (path deps so we always track HEAD).
ledger = { path = "../../ledger", package = "midnight-ledger", default-features = false, features = ["proving", "test-utilities"] }
zswap = { path = "../../zswap", package = "midnight-zswap" }
base-crypto = { path = "../../base-crypto", package = "midnight-base-crypto" }
transient-crypto = { path = "../../transient-crypto", package = "midnight-transient-crypto" }
storage = { path = "../../storage", package = "midnight-storage" }
serialize = { path = "../../serialize", package = "midnight-serialize" }
zkir = { path = "../../zkir", package = "midnight-zkir" }
coin-structure = { path = "../../coin-structure", package = "midnight-coin-structure" }
onchain-runtime = { path = "../../onchain-runtime", package = "midnight-onchain-runtime" }

# Async + RNG.
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
rand = { version = "0.8.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
futures = "0.3"

# Errors / serde / utility.
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tracing = "0.1"
once_cell = "1.20"

# Optional deps for features.
midnight-proof-server = { path = "../../proof-server", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"], optional = true }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = "0.3"

[[bench]]
name = "proofs"
harness = false
required-features = ["bench"]
